src-errormsg/E14-FunctionNameTypo/Plinth.err

/Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E14-FunctionNameTypo/Plinth.hs:28:17: error: [GHC-88464]
    Variable not in scope: modul :: Integer -> t0 -> Integer
    Suggested fix:
      Perhaps use ‘modulo’ (imported from PlutusTx.Prelude)
   |
28 |   Amount n -> n `modul` 2
   |                 ^^^^^^^
